# lz_dexterous_hand_rs485_driver

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: hand_config.yaml
demo/: simple_driver_test.py
include/lz_hand_rs485_driver/: hand_constants.hpp  modbus_driver.hpp
launch/: dual_hand_driver.launch.py  hand_driver.launch.py  hand_test.launch.py
msg/: ForceFeedback.msg  HandControl.msg  HandFeedback.msg  JointControl.msg  JointFeedback.msg  MotorFeedback.msg
scripts/: detect_hand_ports.py  direct_modbus_test.py  hand_driver_node.py  hand_test_node.py
src/: modbus_driver.cpp  python_bindings.cpp
tool/: detect_hand_ports.sh
