<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lz_hand_rs485_driver</name>
  <version>1.1.0</version>
  <description>
    ROS2 driver for LZ dexterous hand via RS485 Modbus-RTU protocol.
    灵掌机器人灵巧手RS485 Modbus-RTU ROS2驱动。
    Supports 6-DOF hand control with force and angle feedback.
    
    Architecture:
    - C++底层: libmodbus通信库 + pybind11 Python绑定
    - Python节点: ROS2驱动节点和测试节点
  </description>

  <maintainer email="garry@example.com">Garry</maintainer>
  <license>BSD-3-Clause</license>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <buildtool_depend>pkg-config</buildtool_depend>

  <!-- C++ dependencies -->
  <build_depend>libmodbus-dev</build_depend>
  <exec_depend>libmodbus5</exec_depend>

  <!-- pybind11 for Python bindings -->
  <build_depend>pybind11-dev</build_depend>
  <build_depend>python3-dev</build_depend>

  <!-- ROS2 dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>builtin_interfaces</depend>

  <!-- Message generation -->
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Interface packages group -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
